--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -109,6 +109,11 @@ hooks:
         rm web/app_dev.php
         composer install --no-dev --prefer-dist --no-progress --no-interaction --optimize-autoloader
 
+        # tmp for ezc demo
+        git clone https://github.com/ezsystems/ezcommerce-demo-assets.git vendor/ezsystems/ezcommerce-demo-assets
+        cp -R vendor/ezsystems/ezcommerce-demo-assets/assets/ web/var/assets/
+
+
     # Deploy hook, access to services & done once (per cluster, not per node), only mounts are writable at this point
     # Note: Http traffic is paused while this is running, so for prod code this should finish as fast as possible, < 30s
     deploy: |
@@ -117,7 +122,16 @@ hooks:
         if [ ! -f web/var/.platform.installed ]; then
             # To workaround issues with p.sh Varnish we clear container cache & temporary set Symfony Proxy
             rm -Rf var/cache/$SYMFONY_ENV/*.*
-            HTTPCACHE_PURGE_TYPE="local" php -d memory_limit=-1 `which composer` ezplatform-install
+
+            HTTPCACHE_PURGE_TYPE="local" php -d memory_limit=-1 `which composer` ezcommerce-install
+
+            php bin/console ezplatform:install ezcommerce_econtent_demo
+            bin/console c:c
+            bin/console kaliop:migration:migrate --path migrations/kaliop_migrations/demo/demo.yml -n
+
+            bin/console ezplatform:reindex
+            bin/console silversolutions:indexecontent --live-core
+
             touch web/var/.platform.installed
         fi
 
