--- a/composer.json
+++ b/composer.json
@@ -86,7 +86,8 @@
         "twig/extensions": "^1.5.3",
         "twig/twig": "^2.5",
         "white-october/pagerfanta-bundle": "^1.2.2",
-        "willdurand/js-translation-bundle": "^2.6.6"
+        "willdurand/js-translation-bundle": "^2.6.6",
+        "predis/predis": "^1.0"
     },
     "require-dev": {
         "behat/behat": "^3.5.0",
