--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -109,7 +109,7 @@ hooks:
         rm web/app_dev.php
         composer install --no-dev --prefer-dist --no-progress --no-interaction --optimize-autoloader
 
-        php bin/console silversolutions:switchdataprovider econtent --location-id=118 --new-root-node=2
+        #php bin/console silversolutions:switchdataprovider econtent --location-id=118 --new-root-node=2
 
         # tmp for ezc demo
         git clone https://github.com/ezsystems/ezcommerce-demo-assets.git vendor/ezsystems/ezcommerce-demo-assets
