--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -25,7 +25,7 @@ relationships:
     database: 'mysqldb:user'
     # Uncomment if you want to store dfs tables in a separate database:
     #dfs_database: 'mysqldb:dfs'
-    rediscache: 'rediscache:redis'
+    #rediscache: 'rediscache:redis'
     # If you wish to have a separate Redis instance for sessions, uncomment
     # this relationship and the corresponding service in .platform/services.yaml
     #redissession: 'redissession:redis'
