--- a/.platform/services.yaml
+++ b/.platform/services.yaml
@@ -20,8 +20,8 @@ mysqldb:
             #        dfs: admin
 
 # For use by Symfony Cache (used by eZ Platform SPI Persistence Cache)
-rediscache:
-    type: 'redis:3.2'
+#rediscache:
+#    type: 'redis:3.2'
 
 # If you wish to have a separate Redis instance for sessions, uncomment
 # this service and the corresponding relationship in .platform.app.yaml.
