--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -73,14 +73,17 @@ mounts:
     'web/var':
         source: local
         source_path: var
-    # To be prepared to move to cluster, please rather use e.g. persisted Redis instance.
-    'web/sessions':
+    'var/sessions':
         source: local
         source_path: sessions
-# Uncomment if you need to use Kaliop Migrations on your setup and not able to get it to write to "var" dir.
-#    'src/AppBundle/MigrationVersions/References':
+    # To be prepared to move to cluster, please rather use e.g. persisted Redis instance.
+#    'web/sessions':
 #        source: local
-#        source_path: MigrationVersionsReferences
+#        source_path: sessions
+# Uncomment if you need to use Kaliop Migrations on your setup and not able to get it to write to "var" dir.
+    'src/AppBundle/MigrationVersions/References':
+        source: local
+        source_path: MigrationVersionsReferences
 # Uncomment if you want to use DFS clustering, WARNING: Needs to be shared, contact Platform.sh support to set this up
 #    'dfsdata':
 #        source: shared
