--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -191,6 +191,7 @@ runtime:
         - imagick
         - readline
         - redis
+        - xdebug
         #- apcu
         #- name: 'blackfire'
         #  configuration:
