--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -9,6 +9,7 @@ imports:
     - { resource: services/ }
     - { resource: ecommerce.yml }
     - { resource: ecommerce_parameters.yml }
+    - { resource: ezlandingpage.yml }
 
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
