--- a/app/config/ecommerce_parameters.yml
+++ b/app/config/ecommerce_parameters.yml
@@ -15,8 +15,17 @@ parameters:
     siso_core.default.user_group_location.business: 58
     siso_core.default.user_group_location.private: 57
     siso_core.default.product_catalog_content_type_id: 47
-
     ezcommerce.installer.migration_files_path: '%kernel.project_dir%/migrations/demo'
-
     one_sky_api_key: my-one-sky-key
     one_sky_secret: my-onesky-password
+    siso_search.default.groups.search:
+        product:
+            types:
+                - 2
+            path: '/2/'
+            section:
+                - 1
+            visibility: true
+
+        #product: { types: [ses_product], path: /1/2/, section: [1], visibility: true }
+        #content: { types: [st_module, folder, article, landing_page], path: /1/2/, section: [1], visibility: true }
